[project]
name = "gpt-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.8.0",
    "mem0ai>=0.1.116",
    "openai-agents>=0.3.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
gpt-clone = "gpt_clone:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
